--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Taifur-X",
+    "name": "taifur-x",
     "version": "2.0.0",
     "description": "A simple and easy-to-use WhatsApp bot project based on Multi-Device Baileys and written in JavaScript",
     "main": "index.js",
