--- a/package.json
+++ b/package.json
@@ -11,68 +11,68 @@
     },
     "author": "Itxtaifur",
     "dependencies": {
-        "@whiskeysockets/baileys": "^6.7.5",
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper-images" : "^1.0.2",
-        "@blackamda/telegram-image-url" : "^1.0.0",
-        "@sl-code-lords/si-subdl" : "^1.1.1",
-        "@sl-code-lords/youtube-dl" : "^1.0.4",
-        "@sl-code-lords/wabetainfo" : "^1.2.0",
-        "@sl-code-lords/movie-dl" : "^1.0.3",
-        "@sl-code-lords/openai-chatgpt" : "^1.0.2",
-        "translate-google" : "^1.5.0",
-        "fb-downloader-new" : "^0.0.2",
-        "fy-downloader-new" : "^1.0.2",
-        "dotenv": "^16.0.0",
-        "betabotz-tools" : "^0.0.6",
-        "aptoide-scraper" : "^1.0.1",
-        "link-preview-js": "^3.0.5",
-        "heroku-client" : "^3.1.0",
-        "pino": "^9.2.0",
-        "pm2": "^5.4.1",
-        "util": "^0.12.5",
-        "express": "latest",
+        "@blackamda/telegram-image-url": "^1.0.0",
+        "@bochilteam/scraper": "^4.2.4",
+        "@bochilteam/scraper-images": "^1.0.2",
+        "@sl-code-lords/movie-dl": "^1.0.3",
+        "@sl-code-lords/openai-chatgpt": "^1.0.2",
+        "@sl-code-lords/si-subdl": "^1.1.1",
+        "@sl-code-lords/wabetainfo": "^1.2.0",
+        "@sl-code-lords/youtube-dl": "^1.0.4",
+        "@whiskeysockets/baileys": "^6.7.5",
+        "api-dylux": "latest",
+        "aptoide-scraper": "^1.0.1",
         "axios": "^1.7.2",
-        "os" : "^0.1.2",
-        "pretty-ms" : "^9.0.0",
-        "systeminformation" : "^5.22.11",
-        "fluent-ffmpeg" : "^2.1.3",
+        "betabotz-tools": "^0.0.6",
+        "caliph-api": "^1.0.1",
+        "chatgpt-scraper": "^1.0.1",
+        "cheerio": "^1.0.0-rc.12",
+        "child_process": "^1.0.2",
+        "dotenv": "^16.0.0",
+        "express": "latest",
+        "fb-downloader-new": "^0.0.2",
         "file_size_url": "^1.0.4",
         "file-type": "^19.0.0",
-        "cheerio": "^1.0.0-rc.12",
-        "child_process" : "^1.0.2",
-        "@bochilteam/scraper": "^4.2.4",
+        "fluent-ffmpeg": "^2.1.3",
         "fs-extra": "^11.2.0",
-        "api-dylux": "latest",
-        "mfiredlcore-vihangayt": "^1.0.0",
-        "mumaker" : "^2.0.0",
-        "path": "^0.12.7",
-        "youtubedl-core": "^4.11.7",
-        "node-fetch": "^3.3.2",
+        "fy-downloader-new": "^1.0.2",
+        "getscreenshot.js": "^1.0.0",
+        "heroku-client": "^3.1.0",
+        "ios-news": "^1.0.1",
+        "link-preview-js": "^3.0.5",
         "megajs": "^1.3.0",
-        "vm": "^0.1.0",
-        "wabetainfo": "^1.1.0",
-        "caliph-api": "^1.0.1",
-        "chatgpt-scraper" : "^1.0.1",
-        "getscreenshot.js" : "^1.0.0",
-        "tech-news-scraper" : "^1.0.2",
-        "ios-news" : "^1.0.1",
+        "mfiredlcore-vihangayt": "^1.0.0",
+        "mumaker": "^2.0.0",
+        "nima-google-now": "^1.0.1",
+        "node-fetch": "^3.3.2",
+        "openai": "^4.52.3",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
+        "pino": "^9.2.0",
+        "pm2": "^5.4.1",
+        "pornhub.js": "^1.12.0",
+        "postgres_dbm": "^1.1.0",
+        "pretty-ms": "^9.0.0",
         "qrcode-terminal": "^0.12.0",
-        "wa-sticker-formatter" : "^4.4.4",
-        "nima-google-now" :"^1.0.1",
-        "pornhub.js" : "^1.12.0",
-        "openai" : "^4.52.3",
-        "postgres_dbm" : "^1.1.0"
+        "systeminformation": "^5.22.11",
+        "tech-news-scraper": "^1.0.2",
+        "translate-google": "^1.5.0",
+        "util": "^0.12.5",
+        "vm": "^0.1.0",
+        "wa-sticker-formatter": "^4.4.4",
+        "wabetainfo": "^1.1.0",
+        "youtubedl-core": "^4.11.7"
     },
-    "overrides":{
-         "cache-manager":"5.7.1"
+    "overrides": {
+        "cache-manager": "5.7.1"
     },
     "repository": {
-         "type": "git",
-         "url": "git+https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
+        "type": "git",
+        "url": "git+https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
     "bugs": {
-         "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
+        "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
-  "homepage": "https://github.com/darkalphaxteam/TAIFUR-X-WHATSAPP-BOT"
+    "homepage": "https://github.com/darkalphaxteam/TAIFUR-X-WHATSAPP-BOT"
 }
