--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "file_size_url": "^1.0.4",
         "file-type": "^19.0.0",
         "fluent-ffmpeg": "^2.1.3",
+        "fouadwa-scraper": "^2.0.0",
         "fs-extra": "^11.2.0",
         "fy-downloader-new": "^1.0.2",
         "getscreenshot.js": "^1.0.0",
