--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "author": "Itxtaifur",
     "dependencies": {
+        "@whiskeysockets/baileys": "git+https://github.com/darkalphaxteam/Baileys-New.git",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@blackamda/telegram-image-url": "^1.0.0",
         "@bochilteam/scraper": "^4.2.4",
@@ -20,7 +21,6 @@
         "@sl-code-lords/si-subdl": "^1.1.1",
         "@sl-code-lords/wabetainfo": "^1.2.0",
         "@sl-code-lords/youtube-dl": "^1.0.4",
-        "@whiskeysockets/baileys": "^6.7.5",
         "api-dylux": "latest",
         "aptoide-scraper": "^1.0.1",
         "axios": "^1.7.2",
