--- a/app.json
+++ b/app.json
@@ -38,12 +38,14 @@
         }
     },
     "buildpacks": [
-        
+        {
+            "url": "heroku/nodejs"
+        },
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
         },
         {
-            "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest"
+            "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
         }
     ],
     "formation": {
