--- a/package.json
+++ b/package.json
@@ -11,65 +11,66 @@
     },
     "author": "darkalphaxteam",
     "dependencies": {
-        "@whiskeysockets/baileys": "git+https://github.com/darkalphaxteam/Baileys-New.git",
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper-images" : "^1.0.2",
-        "@blackamda/telegram-image-url" : "^1.0.0",
-        "@distube/ytdl-core" : "latest",
-        "@sl-code-lords/si-subdl" : "^1.1.1",
-        "@sl-code-lords/youtube-dl" : "^1.0.4",
-        "@sl-code-lords/wabetainfo" : "^1.2.0",
-        "@sl-code-lords/movie-dl" : "^1.0.3",
-        "@sl-code-lords/openai-chatgpt" : "^1.0.2",
-        "translate-google" : "^1.5.0",
-        "aptoide-scraper" : "^1.0.1",
-        "link-preview-js": "^3.0.4",
-        "heroku-client" : "^3.1.0",
-        "pino": "^7.0.5",
-        "pm2": "^5.2.0",
-        "util": "^0.12.4",
-        "express": "latest",
+        "@blackamda/telegram-image-url": "^1.0.0",
+        "@bochilteam/scraper": "^4.0.22-alpha.0",
+        "@bochilteam/scraper-images": "^1.0.2",
+        "@distube/ytdl-core": "latest",
+        "@sl-code-lords/movie-dl": "^1.0.3",
+        "@sl-code-lords/openai-chatgpt": "^1.0.2",
+        "@sl-code-lords/si-subdl": "^1.1.1",
+        "@sl-code-lords/wabetainfo": "^1.2.0",
+        "@sl-code-lords/youtube-dl": "^1.0.4",
+        "@whiskeysockets/baileys": "git+https://github.com/darkalphaxteam/Baileys-New.git",
+        "api-dylux": "latest",
+        "aptoide-scraper": "^1.0.1",
         "axios": "^1.2.5",
-        "os" : "^0.1.2",
-        "pretty-ms" : "^8.0.0",
-        "systeminformation" : "^5.21.11",
-        "fluent-ffmpeg" : "^2.1.2",
+        "caliph-api": "^1.0.0",
+        "chatgpt-scraper": "^1.0.1",
+        "cheerio": "^1.0.0-rc.12",
+        "child_process": "^1.0.2",
+        "express": "latest",
+        "fb-downloader-new": "^0.0.2",
         "file_size_url": "^1.0.4",
         "file-type": "^16.5.3",
-        "cheerio": "^1.0.0-rc.12",
-        "child_process" : "^1.0.2",
-        "@bochilteam/scraper": "^4.0.22-alpha.0",
+        "fluent-ffmpeg": "^2.1.2",
         "fs-extra": "^11.1.0",
-        "api-dylux": "latest",
-        "mfiredlcore-vihangayt": "^1.0.0",
-        "mumaker" : "^2.0.0",
-        "path": "^0.12.7",
-        "youtubedl-core": "^4.11.4",
-        "node-fetch": "^2.6.1",
+        "getscreenshot.js": "^1.0.0",
+        "heroku-client": "^3.1.0",
+        "ios-news": "^1.0.0",
+        "link-preview-js": "^3.0.4",
         "megajs": "^1.1.0",
-        "vm": "^0.1.0",
-        "wabetainfo": "^1.1.0",
-        "caliph-api": "^1.0.0",
-        "chatgpt-scraper" : "^1.0.1",
-        "getscreenshot.js" : "^1.0.0",
-        "tech-news-scraper" : "^1.0.0",
-        "ios-news" : "^1.0.0",
+        "mfiredlcore-vihangayt": "^1.0.0",
+        "mumaker": "^2.0.0",
+        "nima-google-now": "^1.0.1",
+        "node-fetch": "^2.6.1",
+        "openai": "^3.2.1",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
+        "pino": "^7.0.5",
+        "pm2": "^5.2.0",
+        "pornhub.js": "^1.5.1",
+        "postgres_dbm": "^1.1.0",
+        "pretty-ms": "^8.0.0",
         "qrcode-terminal": "^0.12.0",
-        "wa-sticker-formatter" : "^4.4.4",
-        "nima-google-now" :"^1.0.1",
-        "pornhub.js" : "^1.5.1",
-        "openai" : "^3.2.1",
-        "postgres_dbm" : "^1.1.0"
+        "systeminformation": "^5.21.11",
+        "tech-news-scraper": "^1.0.0",
+        "translate-google": "^1.5.0",
+        "util": "^0.12.4",
+        "vm": "^0.1.0",
+        "wa-sticker-formatter": "^4.4.4",
+        "wabetainfo": "^1.1.0",
+        "youtubedl-core": "^4.11.4"
     },
-    "overrides":{
-         "cache-manager":"5.2.2"
+    "overrides": {
+        "cache-manager": "5.2.2"
     },
     "repository": {
-         "type": "git",
-         "url": "git+https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
+        "type": "git",
+        "url": "git+https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
     "bugs": {
-         "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
+        "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
-  "homepage": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
+    "homepage": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
 }
