--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "taifur-taifur-x",
-    "version": "2.0.0",
+    "name": "TAIFUR-X",
+    "version": "2.0.1",
     "description": "A simple and easy-to-use WhatsApp bot project based on Multi-Device Baileys and written in JavaScript",
     "main": "index.js",
     "type": "commonjs",
@@ -15,18 +15,16 @@
         "@adiwajshing/keyed-db": "^0.2.4",
         "@bochilteam/scraper-images" : "^1.0.2",
         "@blackamda/telegram-image-url" : "^1.0.0",
+        "@distube/ytdl-core" : "latest",
         "@sl-code-lords/si-subdl" : "^1.1.1",
         "@sl-code-lords/youtube-dl" : "^1.0.4",
         "@sl-code-lords/wabetainfo" : "^1.2.0",
         "@sl-code-lords/movie-dl" : "^1.0.3",
         "@sl-code-lords/openai-chatgpt" : "^1.0.2",
         "translate-google" : "^1.5.0",
-        "fb-downloader-new" : "^0.0.2",
-        "fouadwa-scraper" : "^2.0.0",
         "aptoide-scraper" : "^1.0.1",
         "link-preview-js": "^3.0.4",
         "heroku-client" : "^3.1.0",
-        "betabotz-tools" : "^0.0.6",
         "pino": "^7.0.5",
         "pm2": "^5.2.0",
         "util": "^0.12.4",
@@ -54,7 +52,7 @@
         "caliph-api": "^1.0.0",
         "chatgpt-scraper" : "^1.0.1",
         "getscreenshot.js" : "^1.0.0",
-        "tech-news-scraper" : "^1.0.2",
+        "tech-news-scraper" : "^1.0.0",
         "ios-news" : "^1.0.0",
         "qrcode-terminal": "^0.12.0",
         "wa-sticker-formatter" : "^4.4.4",
@@ -71,7 +69,7 @@
          "url": "git+https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
     "bugs": {
-         "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT/issues"
+         "url": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
     },
   "homepage": "https://github.com/Itxtaifur/TAIFUR-X-WHATSAPP-BOT"
 }
